--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
-# This compose file is useful for testing https.
-# The .env file sets ENVVARS for the Docker CLI used by this compose file.
 ---
 version: "3"
+
+volumes:
+  assets:
+
+networks:
+  geoapi:
+
 services:
   postgres:
     image: mdillon/postgis
     ports:
       - 5432:5432
+    networks:
+      - geoapi
     container_name: geoapi_postgres
     hostname: geoapi_postgres
     environment:
@@ -14,14 +21,27 @@ services:
       - POSTGRES_USER=dev
       - POSTGRES_DB=dev
 
+  nginx:
+    image: nginx
+    ports:
+      - 8080:80
+    volumes:
+      - ./viewer:/static
+      - ./assets:/assets
+      - ./conf/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - geoapi
+
+
   api:
     build:
       context: .
       dockerfile: ./Dockerfile
-    links:
-      - postgres:postgres
+    networks:
+      - geoapi
     volumes:
       - .:/api
+      - ./assets:/assets
     ports:
       - 8000:8000
     dns:
@@ -30,8 +50,10 @@ services:
     environment:
       - FLASK_APP=/api/geoapi/app.py
       - FLASK_ENV=development
+      - ASSETS_BASE_DIR=/assets
     stdin_open: true
     tty: true
     container_name: geoapi
     hostname: geoapi
-    command: "flask run --host=0.0.0.0 --port=8000"
+#    command: "flask run --host=0.0.0.0 --port=8000"
+    command: "gunicorn -w 4 -b 0.0.0.0:8000 geoapi.app:app --reload"
