--- a/viewer/package.json
+++ b/viewer/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@turf/turf": "^5.1.6",
+    "@types/geojson": "^7946.0.6",
     "@types/leaflet": "^1.4.3",
     "core-js": "^2.5.4",
     "leaflet": "^1.4.0",
