--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,7 +7,7 @@ http {
     server {
         root /static/dist/viewer;
         include /etc/nginx/mime.types;
-
+        client_max_body_size 10g;
         location /api {
             rewrite ^/api(.*) /$1 break;
             proxy_pass http://geoapi:8000;
