--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,6 +8,7 @@ http {
         root /static/dist/viewer;
         include /etc/nginx/mime.types;
         client_max_body_size 10g;
+        client_body_timeout 600s;
         location /api {
             rewrite ^/api(.*) /$1 break;
             proxy_pass http://geoapi:8000;
