--- a/viewer/package.json
+++ b/viewer/package.json
@@ -24,10 +24,13 @@
     "@turf/turf": "^5.1.6",
     "@types/geojson": "^7946.0.6",
     "@types/leaflet": "^1.4.3",
+    "@types/leaflet.markercluster": "^1.0.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.4.0",
+    "leaflet.markercluster": "^1.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.3.3",
     "service": "^0.1.4",
     "tslib": "^1.9.0",
