--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,16 @@ networks:
   geoapi:
 
 services:
+
+  rabbitmq:
+    image: rabbitmq
+    networks:
+      - geoapi
+    environment:
+      - RABBITMQ_DEFAULT_USER=dev
+      - RABBITMQ_DEFAULT_PASS=dev
+      - RABBITMQ_DEFAULT_VHOST=dev
+
   postgres:
     image: mdillon/postgis
     ports:
@@ -33,6 +43,25 @@ services:
       - geoapi
 
 
+  workers:
+    build:
+      context: .
+      dockerfile: ./Dockerfile.entwine
+    networks:
+      - geoapi
+    volumes:
+      - ./geoapi:/api/geoapi
+      - ./assets:/assets
+    environment:
+      - FLASK_APP=/api/geoapi/app.py
+      - FLASK_ENV=development
+      - ASSETS_BASE_DIR=/assets
+    stdin_open: true
+    tty: true
+    container_name: geoapiworkers
+    hostname: geoapiworkers
+    command: "celery -A celery_app worker -l info"
+
   api:
     build:
       context: .
@@ -55,5 +84,4 @@ services:
     tty: true
     container_name: geoapi
     hostname: geoapi
-#    command: "flask run --host=0.0.0.0 --port=8000"
     command: "gunicorn -w 4 -b 0.0.0.0:8000 geoapi.app:app --reload"
