--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,17 +2,17 @@ pipelines:
   default:
     - parallel:
       - step:
-        image: node
-        script:
-          - npm install
-          - npm test
+          image: node
+          script:
+            - npm install
+            - ng test
       - step:
-        image: python:3.7
-        services:
-          - postgres
-        script:
-          - pip install -r requirements.txt
-          - pytest
+          image: python:3.7
+          services:
+            - postgres
+          script:
+            - pip install -r requirements.txt
+            - pytest
 definitions:
   services:
     postgres:
