--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,7 @@ pipelines:
           caches:
             - node
           script:
+            - cd viewer
             - npm install
             - ng test
       - step:
