--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -21,7 +21,7 @@ http {
         }
 
         location /assets {
-            default_type image/jpeg;
+            max_ranges 0;
             expires 30d;
             alias /assets/;
         }
