--- a/Dockerfile.entwine
+++ b/Dockerfile.entwine
@@ -4,7 +4,7 @@ ENV CC clang
 ENV CXX clang++
 
 RUN apt-get update && apt-get install -y \
-    git cmake clang libcurl4-openssl-dev libssl-dev python3.7 python3-pip
+    git cmake clang libcurl4-openssl-dev libssl-dev python3.7 python3-pip ffmpeg
 
 RUN git clone https://github.com/connormanning/entwine.git && \
     cd entwine && \
