--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,6 +8,7 @@ http {
         include /etc/nginx/mime.types;
         client_max_body_size 10g;
         client_body_timeout 600s;
+
         location / {
             rewrite ^/api(.*) /$1 break;
             proxy_pass http://geoapi:8000;
@@ -18,11 +19,24 @@ http {
             proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # Simple requests
+            if ($request_method ~* "(GET|POST)") {
+              add_header "Access-Control-Allow-Origin"  *;
+            }
+
+            # Preflighted requests
+            if ($request_method = OPTIONS ) {
+              add_header "Access-Control-Allow-Origin"  *;
+              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
+              add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+              return 200;
+            }
         }
 
         location /assets {
             max_ranges 0;
             expires 30d;
+            add_header "Access-Control-Allow-Origin"  *;
             alias /assets/;
         }
     }
