CORS settings and port changes

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,7 +9,19 @@ http {
         client_max_body_size 10g;
         client_body_timeout 600s;
 
+
         location / {
+             add_header "Access-Control-Allow-Origin"  *;
+
+            # Preflighted requests
+            if ($request_method = OPTIONS ) {
+              add_header "Access-Control-Allow-Origin"  *;
+              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
+              add_header "Access-Control-Allow-Headers" "*";
+              add_header 'Access-Control-Max-Age' 1728000;
+              add_header 'Content-Length' 0;
+              return 204;
+            }
             rewrite ^/api(.*) /$1 break;
             proxy_pass http://geoapi:8000;
             proxy_http_version 1.1;
@@ -19,18 +31,8 @@ http {
             proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            # Simple requests
-            if ($request_method ~* "(GET|POST)") {
-              add_header "Access-Control-Allow-Origin"  *;
-            }
 
-            # Preflighted requests
-            if ($request_method = OPTIONS ) {
-              add_header "Access-Control-Allow-Origin"  *;
-              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
-              add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
-              return 200;
-            }
+
         }
 
         location /assets {
