--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - geoapi
     volumes:
       - ./geoapi:/api/geoapi
-      - ./assets:/assets
+      - assets:/assets
     environment:
       - FLASK_APP=/api/geoapi/app.py
       - FLASK_ENV=development
@@ -72,7 +72,7 @@ services:
       - geoapi
     volumes:
       - .:/api
-      - ./assets:/assets
+      - assets:/assets
     ports:
       - 8000:8000
     dns:
