Add potree resources for generating pages

--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -12,8 +12,7 @@ cmake -DCMAKE_BUILD_TYPE=Release .. && make && make install && ldconfig
 
 RUN git clone -b develop https://github.com/potree/PotreeConverter.git && cd PotreeConverter && mkdir build && cd build && \
 cmake -DCMAKE_BUILD_TYPE=Release -DLASZIP_INCLUDE_DIRS=/opt/LAStools/LASzip/dll/ -DLASZIP_LIBRARY=/usr/local/lib/liblaszip.so .. && \
-make && make install && cp -r /opt/PotreeConverter/PotreeConverter/resources /opt/PotreeConverter/build/resources
-
+make && make install && cp -r /opt/PotreeConverter/PotreeConverter/resources /resources
 
 RUN pip install --upgrade pip
 
