--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_script:
 
 script:
   - docker network create -d bridge test
-  - docker run -d --net=test -e POSTGRES_DB=test -e POSTGRES_USER=dev -e POSTGRES_PASSWORD=dev --hostname=postgres --name=postgres mdillon/postgis
+  - docker run -d --net=test -p 5432:5432 -e POSTGRES_DB=test -e POSTGRES_USER=dev -e POSTGRES_PASSWORD=dev --hostname=postgres --name=postgres mdillon/postgis
   - docker run --net=test -e APP_ENV=testing taccaci/geoapi pytest
