--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
     - master
 
 install:
+  - docker pull taccaci/geoapi:latest
   - docker build --cache-from taccaci/geoapi -t taccaci/geoapi:latest .
 
 before_script:
