--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 
 install:
   - docker pull taccaci/geoapi:latest
-  - docker build --cache-from taccaci/geoapi -t taccaci/geoapi:latest .
+  - docker build --cache-from taccaci/geoapi:latest -t taccaci/geoapi:latest .
 
 before_script:
   - sudo mkdir /assets
