--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,5 @@ jobs:
         script:
          - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
          - docker push taccaci/geoapi:latest
+        on:
+          branch: master
