Revert "Deploy to dockerhub with this branch"
This reverts commit e2566f7348e287e32136cc47bd28e189ab6fa8e1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ jobs:
         provider: script
         script: docker push taccaci/geoapi:latest
         on:
-          branch: configure-travis-dockerhub
+          branch: master
