Revert "Revert "Deploy to dockerhub with this branch""
This reverts commit 03c0630cde5e42856298b5e9fdeff3689c0ea9b2.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ jobs:
         provider: script
         script: docker push taccaci/geoapi:latest
         on:
-          branch: master
+          branch: configure-travis-dockerhub
