--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ jobs:
         provider: script
         script: docker push taccaci/geoapi:latest
         on:
-          branch: configure-travis-dockerhub
+          branch: master
