Configure travis to use docker hub (#1)
* Push to dockerhub

* Remove dockerhub login

* Docker cache/travis

* Use just single job for this image

* Deploy on every branch to test things

* Revert "Deploy on every branch to test things"

This reverts commit f1cfef1125b4e822d753cb381e688a392a723f28.

* Deploy to dockerhub with this branch

* Rework deploy command so its the required one-line

* Revert "Deploy to dockerhub with this branch"

This reverts commit e2566f7348e287e32136cc47bd28e189ab6fa8e1.

* Add build status to README

* Make language:generic for travis instead of default ruby

* Revert "Revert "Deploy to dockerhub with this branch""

This reverts commit 03c0630cde5e42856298b5e9fdeff3689c0ea9b2.

* Pull geoapi image so we can use it as a cache for building

* Revert "Revert "Revert "Deploy to dockerhub with this branch"""

This reverts commit 5cc50001323bff4617d72420ea00cfbe212237fa.

* Re-activate coverage output

* Use pytest-cov for combined testing/coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,27 @@
+language: generic
 sudo: required
 
 services:
   - docker
 
-branches:
-  only:
-    - master
-
-install:
-  - docker build --cache-from taccaci/geoapi:latest -t taccaci/geoapi:latest .
-
-before_script:
-  - sudo mkdir /assets
-  - sudo service mysql stop
-  - sudo service postgresql stop
-  - docker network create -d bridge test
-  - docker run -d --net=test -p 5432:5432 -e POSTGRES_DB=test -e POSTGRES_USER=dev -e POSTGRES_PASSWORD=dev --hostname=postgres --name=postgres mdillon/postgis
-
-script:
-  - sleep 5
-  - docker run --net=test -e APP_ENV=testing taccaci/geoapi coverage run -m pytest
-  - docker run --net=test -e APP_ENV=testing taccaci/geoapi coverage report
+jobs:
+  include:
+    - name: "geoapi: unit tests / container"
+      before_script:
+      - docker pull taccaci/geoapi:latest
+      - docker build --cache-from taccaci/geoapi:latest -t taccaci/geoapi:latest .
+      - sudo mkdir /assets
+      - sudo service mysql stop
+      - sudo service postgresql stop
+      - docker network create -d bridge test
+      - docker run -d --net=test -p 5432:5432 -e POSTGRES_DB=test -e POSTGRES_USER=dev -e POSTGRES_PASSWORD=dev --hostname=postgres --name=postgres mdillon/postgis
+      - sleep 5
+      script:
+      - docker run --net=test -e APP_ENV=testing taccaci/geoapi:latest pytest --cov=geoapi
+      before_deploy:
+         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      deploy:
+        provider: script
+        script: docker push taccaci/geoapi:latest
+        on:
+          branch: master
