Put lastools binaries in /Users/nathanf/.nvm/versions/node/v8.15.1/bin:/usr/local/opt/qt/bin:/usr/local/kde4/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/Users/nathanf/bin/:/Users/nathanf/Library/Python/2.7/bin/:/Users/nathanf/.npm-global/bin/:/Users/nathanf/dev/cli/bin:/usr/local/Cellar/mysql/8.0.11/bin/

--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -12,8 +12,8 @@ RUN git clone --depth 1 https://github.com/m-schuetz/LAStools.git && cd LAStools
 cmake -DCMAKE_BUILD_TYPE=Release .. && make && make install && ldconfig && rm -rf /opt/LAStools
 
 RUN wget http://www.cs.unc.edu/~isenburg/lastools/download/lastools.zip && \
-unzip -q lastools.zip && cd /opt/LAStools && make && \
-ln -s /opt/LAStools/bin/lasinfo /usr/local/sbin/lasinfo
+unzip -q lastools.zip && cd /opt/LAStools && make
+ENV PATH /opt/LAStools/bin/:$PATH
 
 RUN git clone -b develop https://github.com/potree/PotreeConverter.git && cd PotreeConverter && mkdir build && cd build && \
 cmake -DCMAKE_BUILD_TYPE=Release -DLASZIP_INCLUDE_DIRS=/opt/LAStools/LASzip/dll/ -DLASZIP_LIBRARY=/usr/local/lib/liblaszip.so .. && \
