--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
     - name: "geoapi-workers: unit tests / container"
       before_script:
       - docker pull taccaci/geoapi-workers:latest
-      - docker build --cache-from taccaci/geoapi-workers:latest -t taccaci/geoapi-workers:latest .
+      - docker build --cache-from taccaci/geoapi-workers:latest -t taccaci/geoapi-workers:latest -f Dockerfile.potree
       - sudo mkdir /assets
       - sudo service mysql stop
       - sudo service postgresql stop
