Add laz/las lidar files support (#2)
* Add LAStools

* Add lidar task to process las/laz

* Add potree resources for generating pages

* Get epsg from file

* Add lidar file test

* Add support for epsg from LAS 1.4

* Fix test

* Add test of when las file is missing coordinate reference system

* Add check for feature being in project

* Add lidar feature asset

* Add todo for test

* Fix some construction of asset directory

* Move test to api_tests

* Add missing las fixture

* Use bitbucket-built image for testing

* Use docker build instead of docker-compose build

* Add link with postgress service

* Use port mapping

* Try net=host

* Try add-host

* Use localhost as that is where service is

* Use host.docker.internal in run

* Add just a single feature asset

* Change testing config so we can test response

* Add package missing from slim base image

* Fix pep8 things

* Refactor creation of point cloud features

* Fix unit tests

* Adding marker command to pytest

For some reason the default command in pytest.ini did not work.

* Add testing of geoapi-workers to travis

* Put lastools binaries in /Users/nathanf/.nvm/versions/node/v8.15.1/bin:/usr/local/opt/qt/bin:/usr/local/kde4/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/Users/nathanf/bin/:/Users/nathanf/Library/Python/2.7/bin/:/Users/nathanf/.npm-global/bin/:/Users/nathanf/dev/cli/bin:/usr/local/Cellar/mysql/8.0.11/bin/

* Fix building of worker container

* Handle error when processing point cloud

* Fix docker build command

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,30 @@ jobs:
       - docker run -d --net=test -p 5432:5432 -e POSTGRES_DB=test -e POSTGRES_USER=dev -e POSTGRES_PASSWORD=dev --hostname=postgres --name=postgres mdillon/postgis
       - sleep 5
       script:
-      - docker run --net=test -e APP_ENV=testing taccaci/geoapi:latest pytest --cov=geoapi
+      - docker run --net=test -e APP_ENV=testing taccaci/geoapi:latest pytest --cov=geoapi -m "not worker"
       before_deploy:
          - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       deploy:
         provider: script
         script: docker push taccaci/geoapi:latest
+        on:
+          branch: master
+    - name: "geoapi-workers: unit tests / container"
+      before_script:
+      - docker pull taccaci/geoapi-workers:latest
+      - docker build --cache-from taccaci/geoapi-workers:latest -t taccaci/geoapi-workers:latest -f Dockerfile.potree .
+      - sudo mkdir /assets
+      - sudo service mysql stop
+      - sudo service postgresql stop
+      - docker network create -d bridge test
+      - docker run -d --net=test -p 5432:5432 -e POSTGRES_DB=test -e POSTGRES_USER=dev -e POSTGRES_PASSWORD=dev --hostname=postgres --name=postgres mdillon/postgis
+      - sleep 5
+      script:
+      - docker run --net=test -e APP_ENV=testing taccaci/geoapi-workers:latest pytest --cov=geoapi -m "worker"
+      before_deploy:
+         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      deploy:
+        provider: script
+        script: docker push taccaci/geoapi-workers:latest
         on:
           branch: master
