--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -3,17 +3,21 @@ FROM python:3.7
 RUN apt-get update && apt-get install -y \
 libtiff-dev libgeotiff-dev libgdal-dev \
 libboost-system-dev libboost-thread-dev libboost-filesystem-dev libboost-program-options-dev libboost-regex-dev libboost-iostreams-dev \
-git cmake build-essential wget python3-pip python3-dev ffmpeg
+git cmake build-essential wget python3-pip python3-dev ffmpeg \
+unzip
 
 WORKDIR /opt
 
-RUN git clone https://github.com/m-schuetz/LAStools.git && cd LAStools/LASzip && mkdir build && cd build && \
-cmake -DCMAKE_BUILD_TYPE=Release .. && make && make install && ldconfig
+RUN git clone --depth 1 https://github.com/m-schuetz/LAStools.git && cd LAStools/LASzip && mkdir build && cd build && \
+cmake -DCMAKE_BUILD_TYPE=Release .. && make && make install && ldconfig && rm -rf /opt/LAStools
+
+RUN wget http://www.cs.unc.edu/~isenburg/lastools/download/lastools.zip && \
+unzip -q lastools.zip && cd /opt/LAStools && make
+ENV PATH /opt/LAStools/bin/:$PATH
 
 RUN git clone -b develop https://github.com/potree/PotreeConverter.git && cd PotreeConverter && mkdir build && cd build && \
 cmake -DCMAKE_BUILD_TYPE=Release -DLASZIP_INCLUDE_DIRS=/opt/LAStools/LASzip/dll/ -DLASZIP_LIBRARY=/usr/local/lib/liblaszip.so .. && \
-make && make install && cp -r /opt/PotreeConverter/PotreeConverter/resources /opt/PotreeConverter/build/resources
-
+make && make install && cp -r /opt/PotreeConverter/PotreeConverter/resources /resources
 
 RUN pip install --upgrade pip
 
