--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -1,40 +1,44 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  labels:
-    io.kompose.service: assets
-  name: assets
-spec:
-  accessModes:
-  - ReadWriteMany
-  storageClassName: rbd
-  resources:
-    requests:
-      storage: 10G
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: geoapi-nginx-conf
 data:
-  nginx.conf: |
-    events {
-      worker_connections 1024;
-      accept_mutex off;
-      use epoll;
-    }
-    http {
-        server {
-            include /etc/nginx/mime.types;
-            client_max_body_size 10g;
-            location /assets {
-                max_ranges 0;
-                expires 30d;
-                add_header "Access-Control-Allow-Origin"  *;
-                alias /assets/;
-            }
-        }
-    }
+  site.conf: |
+      server {
+          include /etc/nginx/mime.types;
+          client_max_body_size 10g;
+
+          location / {
+               add_header "Access-Control-Allow-Origin"  *;
+
+              # Preflighted requests
+              if ($request_method = OPTIONS ) {
+                  add_header "Access-Control-Allow-Origin"  *;
+                  add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
+                  add_header "Access-Control-Allow-Headers" "*";
+                  add_header 'Access-Control-Max-Age' 1728000;
+                  add_header 'Content-Length' 0;
+                  return 204;
+              }
+              rewrite ^/api(.*) /$1 break;
+              proxy_pass http://geoapi:5000;
+              proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection 'upgrade';
+              proxy_set_header Host $host;
+              proxy_cache_bypass $http_upgrade;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          }
+
+          location /assets {
+              max_ranges 0;
+              expires 30d;
+              add_header "Access-Control-Allow-Origin"  *;
+              alias /assets/;
+          }
+      }
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -60,11 +64,9 @@ metadata:
     io.kompose.service: geoapi-rabbitmq
   name: geoapi-rabbitmq
 spec:
-  type: NodePort
   ports:
-  - name: "5672"
-    port: 5672
-    targetPort: 5672
+    - port: 5672
+      targetPort: 5672
   selector:
     io.kompose.service: geoapi-rabbitmq
 ---
@@ -78,10 +80,8 @@ metadata:
     io.kompose.service: geoapi-postgres
   name: geoapi-postgres
 spec:
-  type: NodePort
   ports:
-  - name: "5432"
-    port: 5432
+  - port: 5432
     targetPort: 5432
   selector:
     io.kompose.service: geoapi-postgres
@@ -93,16 +93,15 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.16.0 (0c01309)
   labels:
-    io.kompose.service: nginx
+    io.kompose.service: geoapi-nginx
   name: geoapi-nginx
 spec:
   type: NodePort
   ports:
-  - name: "8080"
-    port: 8080
+  - port: 80
     targetPort: 80
   selector:
-    io.kompose.service: nginx
+    io.kompose.service: geoapi-nginx
 ---
 apiVersion: v1
 kind: Service
@@ -110,16 +109,13 @@ metadata:
   annotations:
     kompose.cmd: kompose convert
     kompose.version: 1.16.0 (0c01309)
-  creationTimestamp: null
   labels:
     io.kompose.service: geoapi
   name: geoapi
 spec:
-  type: NodePort
   ports:
-  - name: "5000"
-    port: 5000
-    targetPort: 5000
+    - port: 5000
+      targetPort: 5000
   selector:
     io.kompose.service: geoapi
 ---
@@ -162,8 +158,8 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.16.0 (0c01309)
   labels:
-    io.kompose.service: nginx
-  name: nginx
+    io.kompose.service: geoapi-nginx
+  name: geoapi-nginx
 spec:
   replicas: 1
   strategy:
@@ -171,22 +167,35 @@ spec:
   template:
     metadata:
       labels:
-        io.kompose.service: nginx
+        io.kompose.service: geoapi-nginx
     spec:
       containers:
       - image: nginx
-        name: nginx
-        ports:
-        - containerPort: 8000
+        name: geoapi-nginx
         resources: {}
+        ports:
+          - containerPort: 80
         volumeMounts:
-        - mountPath: /assets
-          name: assets
+          - mountPath: /assets
+            name: assets
+          - mountPath: /etc/nginx/conf.d
+            name: config-volume
       restartPolicy: Always
       volumes:
-      - name: assets
-        persistentVolumeClaim:
-          claimName: assets
+        - name: config-volume
+          configMap:
+            name: geoapi-nginx-conf
+        - name: assets
+          cephfs:
+            monitors:
+              - 172.16.120.3:6789
+              - 172.16.120.4:6789
+              - 172.16.120.5:6789
+            path: /jmeiring
+            user: jmeiring
+            readOnly: false
+            secretRef:
+              name: ceph-secret
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -245,8 +254,17 @@ spec:
       restartPolicy: Always
       volumes:
       - name: assets
-        persistentVolumeClaim:
-          claimName: assets
+        cephfs:
+          monitors:
+            - 172.16.120.3:6789
+            - 172.16.120.4:6789
+            - 172.16.120.5:6789
+          path: /jmeiring
+          user: jmeiring
+          readOnly: false
+          secretRef:
+            name: ceph-secret
+
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -354,25 +372,33 @@ spec:
       hostname: geoapi
       restartPolicy: Always
       volumes:
-      - name: assets
-        persistentVolumeClaim:
-          claimName: assets
+        - name: assets
+          cephfs:
+            monitors:
+              - 172.16.120.3:6789
+              - 172.16.120.4:6789
+              - 172.16.120.5:6789
+            path: /jmeiring
+            user: jmeiring
+            readOnly: false
+            secretRef:
+              name: ceph-secret
 ---
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: geoapi-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /assets
-        backend:
-          serviceName: geoapi-nginx
-          servicePort: 8080
-      - path: /
-        backend:
-          serviceName: geoapi
-          servicePort: 5000
+#apiVersion: extensions/v1beta1
+#kind: Ingress
+#metadata:
+#  name: geoapi-ingress
+#  annotations:
+#    nginx.ingress.kubernetes.io/enable-cors: "true"
+#spec:
+#  rules:
+#  - http:
+#      paths:
+#      - path: /assets
+#        backend:
+#          serviceName: geoapi-nginx
+#          servicePort: 8080
+#      - path: /
+#        backend:
+#          serviceName: geoapi
+#          servicePort: 5000
